# RType

./: .gitignore  CMakeLists.txt  ConceptionRType.pptx  PacketGenerator.php  PacketList.json  PacketTester.php  README.md  RFC42RTYPE-V1.1.txt  RFC42RTYPE-V1.2.txt  RFC42RTYPE-V2.txt  RType  RType_test_dlloader  benchmarkCallback.txt  d  hitboxfunctions.cpp  main.cpp  test.sh
Event/include/: Event.hpp  IEventQueue.hh
GUI/: Makefile  Makefile~  gomoku  gui_test
GUI/include/: Click.hh  Color.hh  Form.hh  GUI.hh  GUI.hh~  GuiEventManager.hh  GuiEventManager.hh~  IGUI.hh  IGUI.hh~  IGuiEventManager.hh  IGuiEventManager.hh~  IKeyboardManager.hh  IWidget.hh  IWindow.hh  KeyboardManager.hh  SpriteMap.hpp  Style.hh  Widget.hh  Window.hh  main.cpp
GUI/include/Audio/: SoundManager.hh
GUI/src/: GUI.cpp  GUI.cpp~  GuiEventManager.cpp  Widget.cpp  Widget.cpp~  Window.cpp  Window.cpp~  main_gui.cpp
GUI/src/Audio/: SoundManager.cpp  SoundManager.cpp~
Network_Rtype/: ASocketTCP.hh  ASocketUDP.hh  AUserNetwork.cpp  AUserNetwork.hh  Buffer.cpp  Buffer.hh  CMakeLists.txt  ISocket.hh  IUserNetwork.hh  SocketTCPUnix.hh  SocketTCPUnixClient.hh  SocketTCPWindows.cpp  SocketUDPUnix.hh  SocketUDPWindows.cpp  SocketUDPWindows.hh  UserNetworkTCP.hh  UserNetworkTCP.hpp  UserNetworkTCPUnix.hpp  UserNetworkTCPUnixClient.hh  UserNetworkTCPUnixServer.hh  UserNetworkTCPWindows.hh  UserNetworkTCPWindows.hpp  UserNetworkTCPWindowsClient.cpp  UserNetworkTCPWindowsClient.hh  UserNetworkTCPWindowsServer.cpp  UserNetworkTCPWindowsServer.hh  UserNetworkUDP.hh  UserNetworkUDP.hpp  UserNetworkUDPUnix.hh  UserNetworkUDPWindows.cpp  UserNetworkUDPWindows.hh  bug  mainClient.cpp  mainServer.cpp
Network_Rtype/includes/error/: IError.hh
Network_Rtype/includes/network/: ASocketUDP.hh  AUserNetwork.hh  Buffer.hh  DataClient.hpp  IManageNetwork.hh  ISocket.hh  IUserNetwork.hh  ManageNetwork.hh  UserNetworkUDP.hpp
Network_Rtype/includes/network/unix/: SocketTCPUnix.hh  SocketTCPUnixClient.hh  SocketUDPUnix.hh  UserNetworkTCPUnixClient.hh  UserNetworkTCPUnixServer.hh  UserNetworkUDPUnix.hh
Network_Rtype/includes/network/windows/: SocketTCPWindows.hh  SocketTCPWindowsClient.hh  SocketUDPWindows.hh  UserNetworkTCPWindows.hpp  UserNetworkTCPWindowsServer.hh
Network_Rtype/src/client/: mainClient.cpp
Network_Rtype/src/network/: AUserNetwork.cpp  Buffer.cpp  ManageNetwork.cpp
Network_Rtype/src/network/unix/: SocketTCPUnix.cpp  SocketTCPUnix.cpp~  SocketTCPUnixClient.cpp~  SocketUDPUnix.cpp  SocketUDPUnix.cpp~  UserNetworkTCPUnixClient.cpp  UserNetworkTCPUnixClient.cpp~  UserNetworkTCPUnixServer.cpp  UserNetworkUDPUnix.cpp  UserNetworkUDPUnix.cpp~
Network_Rtype/src/network/windows/: SocketTCPWindows.cpp  SocketUDPWindows.cpp  UserNetworkTCPWindowsClient.cpp  UserNetworkTCPWindowsServer.cpp  UserNetworkUDPWindows.cpp
Network_Rtype/src/server/: mainServer.cpp
assets/rc/: client.rc  server.rc
client/Event/src/: EventQueue.cpp
client/GUI/: gui_test
client/GUI/include/: CoreClient.hh  Form.hh  IGUI.hh  IGuiEventManager.hh  Police.hh  Widget.hh
client/GUI/src/: GUI.cpp  GuiEventManager.cpp  main_gui.cpp
client/include/Event/: Event.hpp  EventQueue.hh
client/include/GUI/: Assets.hh  Chat.hh  Color.hh  GUI.hh  GuiEventManager.hh  IGUI.hh  IWidget.hh  IWindow.hh  Key.hh  SpriteMap.hpp  Style.hh  Widget.hh  Window.hh
client/include/core/: CoreClient.hh  GameData.hpp  IManagerClient.hh  ManagerClient.hh
client/include/error/: ErrorClient.hpp
client/include/packet/: ManagerPacketClient.hh
client/src/GUI/: #GUI.cpp#  Chat.cpp  Clock.cpp  GUI.cpp  GuiEventManager.cpp  GuiInteractionFunctions.cpp  GuiInteractionFunctions.cpp~  Widget.cpp  Window.cpp
client/src/core/: CoreClient.cpp  CoreClient.hh  ManagerClient.cpp  main.cpp
client/src/packet/: ManagerPacketClient.cpp
cmake_modules/: FindSFML.cmake
common/include/core/: ACore.hh  ICore.hh  IManageNetwork.hh  IManager.hh  Manager.hh
common/include/data/: AData.hh  DataBackground.hpp  DataEnnemy.hpp  DataPlayer.hpp  DataRoom.hpp  DataShoot.hpp  IData.hh  ShootPlayer.hpp
common/include/elements/: Background.hh  Decor.hh  Ennemy.hh  Player.hh  Shoot.hh
common/include/elements_tools/: AElement.hh  IElement.hh
common/include/network/: AManageNetwork.hh  AManageNetwork.hpp  AManageNetworkTCP.hpp  AManageNetworkUDP.hpp  ASocketTCP.hh  ASocketUDP.hh  AUserNetwork.hh  Buffer.hh  ErrorSocket.hpp  IManageNetwork.hh  ISocket.hh  IUserNetwork.hh  ManageNetworkTCP.hh  ManageNetworkTCPClient.hh  ManageNetworkTCPServer.hh  ManageNetworkUDP.hh  ManageNetworkUDPClient.hh  ManageNetworkUDPServer.hh  UserNetworkTCP.hpp
common/include/packet/: AManagePacket.hh  IManagePacket.hh  IPacketQueue.hh  PacketAccept.hh  PacketAskRoomData.hh  PacketAskRooms.hh  PacketBackgrounds.hh  PacketC.hpp  PacketChatMessage.hh  PacketConnect.hh  PacketCreateGame.hh  PacketCreateRoom.hh  PacketDisconnect.hh  PacketEnnemies.hh  PacketError.hh  PacketErrorCall.hpp  PacketFactory.hh  PacketGame.hh  PacketGameEnded.hh  PacketJoinError.hh  PacketJoinGame.hh  PacketJoinRoom.hh  PacketLeaveGame.hh  PacketLeaveRoom.hh  PacketLogin.hh  PacketLogout.hh  PacketMove.hh  PacketMusic.hh  PacketPing.hh  PacketPlayerData.hh  PacketPlayerData.hh~  PacketPlayers.hh  PacketPong.hh  PacketPositionPlayer.hh  PacketProfile.hh  PacketQueue.hh  PacketRegister.hh  PacketRoomData.hh  PacketRooms.hh  PacketShoot.hh  (+11 more)
common/include/packet_data/: DataBackground.hpp  DataEnnemy.hpp  DataPlayer.hpp  DataPlayerName.hpp  DataPlayerPosition.hpp  DataRoom.hpp  DataShoot.hpp
common/include/packet_tools/: AManagePacket.hh  APacket.hh  IPacket.hh  IPacketManager.hh  IPacketQueue.hh  PacketC.hpp  PacketContener.hpp  PacketDeserializer.hh  PacketFactory.hh  PacketGlobalError.hh  (+5 more)
ennemies_lib/: Alien.cpp  Alien.hh  CMakeLists.txt
ennemies_lib/include/: AElement.hh  Alf.hh  AlfShoot.hpp  Alien.hh  Bydos.hh  BydosShoot.hpp  DataEnnemy.hpp  Monster.hh  MonsterShoot.hpp  Pirate.hh  PirateShoot.hpp  ShootBydos.hpp
ennemies_lib/src/: AData.cpp  Alf.cpp  Alien.cpp  Bydos.cpp  Ennemy.cpp  Monster.cpp  Pirate.cpp
(+177 files in other folders)
